--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "tp-api-code-quality",
-  "version": "1.0.0",
-  "description": "API creation in TS",
-  "main": "index.js",
+  "name": "adressApp",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js",
+    "lint": "eslint . --ext .ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LaChevrenen/TP-API-Code-Quality.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LaChevrenen/TP-API-Code-Quality/issues"
-  },
-  "homepage": "https://github.com/LaChevrenen/TP-API-Code-Quality#readme",
   "dependencies": {
-    "body-parser": "^2.2.2",
-    "cors": "^2.8.5",
-    "express": "^5.2.1",
-    "typescript": "^5.9.3"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0",
+    "swagger-ui-express": "5.0.1",
+    "yaml": "2.8.2"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.1",
+    "@types/swagger-ui-express": "4.1.8",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2",
+    "eslint": "^8.48.0",
+    "@typescript-eslint/parser": "^6.7.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.1"
   }
 }
